--- a/src/app/test-management/test-cases/test-cases.component.html
+++ b/src/app/test-management/test-cases/test-cases.component.html
@@ -17,7 +17,7 @@
   <!--<clr-dg-column >Order</clr-dg-column>-->
   <!--<clr-dg-column>Status</clr-dg-column>-->
   <clr-dg-column>{{ 'TESTMANAGEMENTPAGE.TAGS' | translate }}</clr-dg-column>
-  <clr-dg-column style="width: 30px !important;">{{ 'TESTMANAGEMENTPAGE.TYPE' | translate }}</clr-dg-column>
+  <!--<clr-dg-column style="width: 30px !important;">{{ 'TESTMANAGEMENTPAGE.TYPE' | translate }}</clr-dg-column>-->
 
   <clr-dg-row *clrDgItems="let testCase of testCases" [clrDgItem]="testCase">
     <!--
@@ -28,11 +28,11 @@
 -->
 
     <clr-dg-cell [ngSwitch]="testCase.priority" style="text-align: center;">
-      <clr-icon *ngSwitchCase="'BLOCKER'" class="blocker-color is-solid" shape="circle"></clr-icon>
-      <clr-icon *ngSwitchCase="'CRITICAL'" class="critical-color is-solid" shape="circle"></clr-icon>
-      <clr-icon *ngSwitchCase="'MAJOR'" class="major-color is-solid" shape="circle"></clr-icon>
-      <clr-icon *ngSwitchCase="'MINOR'" class="minor-color is-solid" shape="circle"></clr-icon>
-      <clr-icon *ngSwitchCase="'TRIVIAL'" class="trivial-color is-solid" shape="circle"></clr-icon>
+      <clr-icon *ngSwitchCase="'BLOCKER'" title="{{ 'PRIORITIES.BLOCKER' | translate }}" class="blocker-color is-solid" shape="circle"></clr-icon>
+      <clr-icon *ngSwitchCase="'CRITICAL'" title="{{ 'PRIORITIES.CRITICAL' | translate }}" class="critical-color is-solid" shape="circle"></clr-icon>
+      <clr-icon *ngSwitchCase="'MAJOR'" title="{{ 'PRIORITIES.MAJOR' | translate }}" class="major-color is-solid" shape="circle"></clr-icon>
+      <clr-icon *ngSwitchCase="'MINOR'" title="{{ 'PRIORITIES.MINOR' | translate }}" class="minor-color is-solid" shape="circle"></clr-icon>
+      <clr-icon *ngSwitchCase="'TRIVIAL'" title="{{ 'PRIORITIES.TRIVIAL' | translate }}" class="trivial-color is-solid" shape="circle"></clr-icon>
     </clr-dg-cell>
     <clr-dg-cell>
       {{testCase.title}}
@@ -46,11 +46,13 @@
 
     </clr-dg-cell>
 
+    <!--
     <clr-dg-cell [ngSwitch]="testCase.type" style="text-align: center;">
       <clr-icon *ngSwitchCase="'POSITIVE'" class="positive-case" shape="happy-face"></clr-icon>
       <clr-icon *ngSwitchCase="'NEGATIVE'" class="negative-case" shape="sad-face"></clr-icon>
 
     </clr-dg-cell>
+    -->
 
     <!-- TODO for execution
     <clr-dg-row-detail *clrIfExpanded [clrDgReplace]="false">
