fix(testcases): add test step button to edit testcase

--- a/src/app/test-management/edit-test-case-modal/edit-test-case-modal.component.html
+++ b/src/app/test-management/edit-test-case-modal/edit-test-case-modal.component.html
@@ -65,8 +65,8 @@
 
           <clr-dg-action-bar>
             <div class="btn-group">
-              <!--<button type="button" class="btn btn-sm btn-secondary" (click)="onAdd()">
-                <clr-icon shape="plus"></clr-icon> {{ 'TESTMANAGEMENTPAGE.ADD' | translate }}</button>-->
+              <button type="button" class="btn btn-sm btn-secondary" (click)="onAdd()">
+                <clr-icon shape="plus"></clr-icon> {{ 'TESTMANAGEMENTPAGE.ADD' | translate }}</button>
               <button type="button" class="btn btn-sm btn-secondary" (click)="onDelete()" *ngIf="selectedTestSteps.length > 0">
                 <clr-icon shape="close"></clr-icon> {{ 'TESTMANAGEMENTPAGE.DELETE' | translate }}</button>
               <button type="button" class="btn btn-sm btn-secondary" (click)="onEdit()" *ngIf="selectedTestSteps.length === 1">
