--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -29,17 +29,19 @@
 
         <div class="form-group">
           <label for="phonenumber">{{ 'USERPROFILEPAGE.PHONE_NUMBER' | translate }}</label>
-          <input type="text" id="phonenumber" name="phoneNumber" placeholder="+7 (495) 123-45-67" size="35">
+          <input type="text" id="phonenumber" name="phoneNumber" [(ngModel)]="profile.workInfo.phoneNumber" placeholder="+7 (495) 123-45-67"
+            size="35">
         </div>
 
         <div class="form-group">
           <label for="jobtitle">{{ 'USERPROFILEPAGE.JOB_TITLE' | translate }}</label>
-          <input type="text" id="jobtitle" name="jobTitle" placeholder="Senior Test Engineer" size="35">
+          <input type="text" id="jobtitle" name="jobTitle" [(ngModel)]="profile.workInfo.jobTitle" placeholder="Senior Test Engineer"
+            size="35">
         </div>
 
         <div class="form-group">
           <label for="company">{{ 'USERPROFILEPAGE.COMPANY' | translate }}</label>
-          <input type="text" id="company" name="company" placeholder="Example Inc." size="35">
+          <input type="text" id="company" name="company" [(ngModel)]="profile.workInfo.companyName" placeholder="Example Inc." size="35">
         </div>
 
         <button type="submit" class="btn btn-primary">{{ 'USERPROFILEPAGE.SAVE_BUTTON' | translate }}</button>
