feat(inventory): introduce edit and delete device

--- a/src/app/settings/inventory/create-device-modal/create-device-modal.component.html
+++ b/src/app/settings/inventory/create-device-modal/create-device-modal.component.html
@@ -5,15 +5,6 @@
       <section class="form-block">
 
         <div class="form-group">
-          <label for="type">{{ 'DEVICECREATEPAGE.TYPE' | translate }}</label>
-          <div class="select">
-            <select id="type" name="type" [(ngModel)]="device.type" #type="ngModel">
-              <option *ngFor="let deviceType of typeKeys" [value]="deviceType.value">{{ 'DEVICETYPES.' + deviceType.value | translate }}</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="form-group">
           <label class="required" for="manufacturer">{{ 'DEVICECREATEPAGE.MANUFACTURER' | translate }}</label>
           <input [appAutofocus]="opened" type="text" id="manufacturer" name="manufacturer" [(ngModel)]="device.manufacturer" #manufacturer="ngModel"
             required placeholder="{{ 'DEVICECREATEPAGE.MANUFACTURER_PLACEHOLDER' | translate }}" size="35">
@@ -22,6 +13,27 @@
         <div class="form-group">
           <label class="required" for="model">{{ 'DEVICECREATEPAGE.MODEL' | translate }}</label>
           <input type="text" id="model" name="model" [(ngModel)]="device.model" #model="ngModel" required placeholder="{{ 'DEVICECREATEPAGE.MODEL_PLACEHOLDER' | translate }}"
+            size="35">
+        </div>
+
+        <div class="form-group">
+          <label class="required" for="type">{{ 'DEVICECREATEPAGE.TYPE' | translate }}</label>
+          <div class="select">
+            <select id="type" name="type" [(ngModel)]="device.type" #type="ngModel">
+              <option *ngFor="let deviceType of typeKeys" [value]="deviceType.value">{{ 'DEVICETYPES.' + deviceType.value | translate }}</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="required" for="os">{{ 'DEVICECREATEPAGE.OS' | translate }}</label>
+          <input type="text" id="os" name="os" [(ngModel)]="device.os" #os="ngModel" required placeholder="{{ 'DEVICECREATEPAGE.OS_PLACEHOLDER' | translate }}"
+            size="35">
+        </div>
+
+        <div class="form-group">
+          <label class="required" for="version">{{ 'DEVICECREATEPAGE.OS_VERSION' | translate }}</label>
+          <input type="text" id="version" name="version" [(ngModel)]="device.osVersion" #osVersion="ngModel" required placeholder="{{ 'DEVICECREATEPAGE.OS_VERSION_PLACEHOLDER' | translate }}"
             size="35">
         </div>
 
