--- a/src/app/settings/inventory/edit-device-modal/edit-device-modal.component.html
+++ b/src/app/settings/inventory/edit-device-modal/edit-device-modal.component.html
@@ -1,3 +1,48 @@
-<p>
-  edit-device-modal works!
-</p>
+<clr-modal *ngIf="opened" [(clrModalOpen)]="opened">
+  <h3 class="modal-title">{{ 'DEVICECREATEPAGE.TITLE' | translate }}</h3>
+  <div class="modal-body">
+    <form (ngSubmit)="setOpened(false); updateDevice()" id="updateDeviceForm" #updateDeviceForm="ngForm" (keyup.enter)="updateDeviceForm.form.valid && updateDeviceForm.ngSubmit.emit();">
+      <section class="form-block">
+
+        <div class="form-group">
+          <label class="required" for="manufacturer">{{ 'DEVICECREATEPAGE.MANUFACTURER' | translate }}</label>
+          <input [appAutofocus]="opened" type="text" id="manufacturer" name="manufacturer" [(ngModel)]="device.manufacturer" #manufacturer="ngModel"
+            required placeholder="{{ 'DEVICECREATEPAGE.MANUFACTURER_PLACEHOLDER' | translate }}" size="35">
+        </div>
+
+        <div class="form-group">
+          <label class="required" for="model">{{ 'DEVICECREATEPAGE.MODEL' | translate }}</label>
+          <input type="text" id="model" name="model" [(ngModel)]="device.model" #model="ngModel" required placeholder="{{ 'DEVICECREATEPAGE.MODEL_PLACEHOLDER' | translate }}"
+            size="35">
+        </div>
+
+        <div class="form-group">
+          <label class="required" for="type">{{ 'DEVICECREATEPAGE.TYPE' | translate }}</label>
+          <div class="select">
+            <select id="type" name="type" [(ngModel)]="device.type" #type="ngModel">
+              <option *ngFor="let deviceType of typeKeys" [value]="deviceType.value">{{ 'DEVICETYPES.' + deviceType.value | translate }}</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="required" for="os">{{ 'DEVICECREATEPAGE.OS' | translate }}</label>
+          <input type="text" id="os" name="os" [(ngModel)]="device.os" #os="ngModel" required placeholder="{{ 'DEVICECREATEPAGE.OS_PLACEHOLDER' | translate }}"
+            size="35">
+        </div>
+
+        <div class="form-group">
+          <label class="required" for="version">{{ 'DEVICECREATEPAGE.OS_VERSION' | translate }}</label>
+          <input type="text" id="version" name="version" [(ngModel)]="device.osVersion" #osVersion="ngModel" required placeholder="{{ 'DEVICECREATEPAGE.OS_VERSION_PLACEHOLDER' | translate }}"
+            size="35">
+        </div>
+
+
+      </section>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline" (click)="setOpened(false)">{{ 'COMMON.CANCEL_BUTTON' | translate }}</button>
+    <button type="button" class="btn btn-primary" (click)="updateDeviceForm.ngSubmit.emit();" [disabled]="!updateDeviceForm.form.valid">{{ 'COMMON.SAVE_BUTTON' | translate }}</button>
+  </div>
+</clr-modal>
