--- a/src/app/test-executions/delete-test-run-modal/delete-test-run-modal.component.html
+++ b/src/app/test-executions/delete-test-run-modal/delete-test-run-modal.component.html
@@ -1,3 +1,10 @@
-<p>
-  delete-test-run-modal works!
-</p>
+<clr-modal [(clrModalOpen)]="opened">
+  <h3 class="modal-title">{{ 'TESTEXECUTIONCREATEPAGE.MODAL_DELETE_HEADER' | translate }}</h3>
+  <div class="modal-body">
+    <p>{{ 'TESTEXECUTIONCREATEPAGE.MODAL_DELETE_DESCRIPTION' | translate }}</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline" (click)="setOpened(false)">{{ 'COMMON.CANCEL_BUTTON' | translate }}</button>
+    <button type="button" class="btn btn-primary btn-danger" (click)="setOpened(false); deleteUser();">{{ 'COMMON.DELETE_BUTTON' | translate }}</button>
+  </div>
+</clr-modal>
