--- a/src/app/test-executions/edit-test-run-modal/edit-test-run-modal.component.html
+++ b/src/app/test-executions/edit-test-run-modal/edit-test-run-modal.component.html
@@ -1,3 +1,26 @@
-<p>
-  edit-test-run-modal works!
-</p>
+<clr-modal *ngIf="opened" [(clrModalOpen)]="opened">
+  <h3 class="modal-title">{{ 'TESTEXECUTIONCREATEPAGE.CREATE_TESTRUN' | translate }}</h3>
+  <div class="modal-body">
+    <form (ngSubmit)="setOpened(false); updateTestrun()" id="updateTestrunForm" #updateTestrunForm="ngForm" (keyup.enter)="updateTestrunForm.form.valid && updateTestrunForm.ngSubmit.emit();">
+      <section class="form-block">
+
+        <div class="form-group">
+          <label class="required" for="name">{{ 'TESTEXECUTIONCREATEPAGE.NAME' | translate }}</label>
+          <input [appAutofocus]="opened" type="text" id="name" name="name" [(ngModel)]="testrun.name" #name="ngModel" required placeholder="{{ 'TESTEXECUTIONCREATEPAGE.NAME_PLACEHOLDER' | translate }}"
+            size="35">
+        </div>
+
+        <div class="form-group">
+          <label for="description">{{ 'TESTEXECUTIONCREATEPAGE.DESCRIPTION' | translate }}</label>
+          <input type="text" id="description" name="description" [(ngModel)]="testrun.description" #description="ngModel" placeholder="{{ 'TESTEXECUTIONCREATEPAGE.DESCRIPTION_PLACEHOLDER' | translate }}"
+            size="35">
+        </div>
+
+      </section>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline" (click)="setOpened(false)">{{ 'TESTMANAGEMENTPAGE.CANCEL' | translate }}</button>
+    <button type="button" class="btn btn-primary" (click)="updateTestrunForm.ngSubmit.emit();" [disabled]="!updateTestrunForm.form.valid">{{ 'TESTCASECREATEPAGE.CREATE_BUTTON' | translate }}</button>
+  </div>
+</clr-modal>
