fix(testexecutions): fix method name

--- a/src/app/test-executions/delete-test-run-modal/delete-test-run-modal.component.html
+++ b/src/app/test-executions/delete-test-run-modal/delete-test-run-modal.component.html
@@ -5,6 +5,6 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-outline" (click)="setOpened(false)">{{ 'COMMON.CANCEL_BUTTON' | translate }}</button>
-    <button type="button" class="btn btn-primary btn-danger" (click)="setOpened(false); deleteUser();">{{ 'COMMON.DELETE_BUTTON' | translate }}</button>
+    <button type="button" class="btn btn-primary btn-danger" (click)="setOpened(false); deleteTestrun();">{{ 'COMMON.DELETE_BUTTON' | translate }}</button>
   </div>
 </clr-modal>
