--- a/src/app/test-executions/edit-test-run-modal/edit-test-run-modal.component.html
+++ b/src/app/test-executions/edit-test-run-modal/edit-test-run-modal.component.html
@@ -16,6 +16,16 @@
             size="35">
         </div>
 
+        <div class="form-group">
+          <label for="startDate">Started from date</label>
+          <input type="date" id="startDate" name="startDate" [(ngModel)]="testrun.startDate" clrDate>
+        </div>
+
+        <div class="form-group">
+          <label for="endDate">Till date</label>
+          <input type="date" id="endDate" name="endDate" [(ngModel)]="testrun.endDate" clrDate>
+        </div>
+
       </section>
     </form>
   </div>
