--- a/src/app/projects/edit-project-modal/edit-project-modal.component.html
+++ b/src/app/projects/edit-project-modal/edit-project-modal.component.html
@@ -6,11 +6,12 @@
 
         <div class="form-group">
           <label for="name" class="required">{{ 'PROJECTCREATEPAGE.NAME' | translate }}</label>
-          <input type="text" id="name" name="name" [(ngModel)]="project.name" #name="ngModel" required minlength="2">
+          <input type="text" id="name" name="name" [(ngModel)]="project.name" #name="ngModel" size="35" required minlength="2">
         </div>
         <div class="form-group">
           <label for="description" class="required">{{ 'PROJECTCREATEPAGE.DESCRIPTION' | translate }}</label>
-          <input type="text" id="description" name="description" [(ngModel)]="project.description" #description="ngModel" required>
+          <input type="text" id="description" name="description" [(ngModel)]="project.description" #description="ngModel" size="35"
+            required>
         </div>
 
       </section>
