feat(testruns): add progress to testruns and testrun details show real testrun

--- a/src/app/test-executions/test-executions-details/test-executions-details.component.html
+++ b/src/app/test-executions/test-executions-details/test-executions-details.component.html
@@ -1,3 +1,15 @@
+<h3>
+  {{testrun.name}}
+  <a (click)="onEdit();" class="btn btn-primary">
+    <clr-icon shape="pencil"></clr-icon> {{ 'TESTMANAGEMENTPAGE.EDIT' | translate }}
+  </a>
+</h3>
+Dashboard with progress will be here
+<br>
+<a class="btn btn-primary">
+  <clr-icon shape="plus"></clr-icon> Add testcases
+</a>
+<!--
 <ul>
   <li>test execution name</li>
   <li>test execution description</li>
@@ -7,3 +19,4 @@
   <li>finished date/time</li>
   <li>testcases</li>
 </ul>
+-->
