--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,74 @@
-<p>
-  dashboard works!
-</p>
+<div class="wrapper">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+      <div class="card clickable">
+        <div class="card-block">
+          <h4 class="card-title">Last Test Execution</h4>
+          <div style="width: 150px;">
+            <svg width="100%" height="100%" viewBox="0 0 42 42" class="donut">
+              <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#000000" stroke-opacity="0.15"
+                stroke-width="3"></circle>
+
+              <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#5ea41c" stroke-width="3"
+                stroke-dasharray="85 15" stroke-dashoffset="25"></circle>
+              <g class="chart-text">
+                <text x="50%" y="50%" class="chart-number">
+                  85%
+                </text>
+                <text x="50%" y="50%" class="chart-label">
+                  Completed
+                </text>
+              </g>
+            </svg>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+      <div class="card clickable">
+        <div class="card-block">
+          <h4 class="card-title">Test Cases</h4>
+          <div class="card-container">
+            <p class="card-description">850</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+      <div class="card clickable">
+        <div class="card-block">
+          <h4 class="card-title">CI / CD</h4>
+          <div class="card-container">
+
+
+            <clr-icon shape="check-circle" class="success" size="120"></clr-icon>
+
+
+            <p class="card-ci">PASSED</p>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+      <div class="card clickable">
+        <div class="card-block">
+          <h4 class="card-title">iOS User Profile Feature run</h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur magnam eos amet sit rem..</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+      <div class="card clickable">
+        <div class="card-block">
+          <h4 class="card-title">iOS User Profile Feature run</h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur magnam eos amet sit rem..</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
