--- a/src/app/settings/integrations/integrations.component.html
+++ b/src/app/settings/integrations/integrations.component.html
@@ -12,4 +12,12 @@
   <ul>
     <li>Trello</li>
   </ul>
+
+  <h4>CI / CD</h4>
+  <small>via REST API</small>
+  <ul>
+    <li>Jenkins</li>
+    <li>Teamcity</li>
+    <li>TBD</li>
+  </ul>
 </div>
