--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,6 +1,6 @@
 <clr-main-container>
   <simple-notifications [options]="toastNotificationsOptions"></simple-notifications>
-  <!--<app-notification></app-notification>-->
+  <app-notification></app-notification>
   <app-header></app-header>
   <div class="content-container">
     <router-outlet></router-outlet>
