--- a/src/app/test-management/testcase-review/testcase-review.component.html
+++ b/src/app/test-management/testcase-review/testcase-review.component.html
@@ -3,12 +3,25 @@
         <tr>
             <th class="left">#</th>
             <th>Title</th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let testCase of testCases; let i = index">
             <td class="left">{{i + 1}}</td>
             <td class="left">{{ testCase.title }}</td>
+            <td class="right">
+              <div class="select">
+                <select>
+                  <option>Approved</option>
+                  <option>Rejected</option>
+                  <option>Automation Candidate</option>
+                  <option>Automated</option>
+                  <option>Archieved</option>
+                  <!-- change selected test case status on change -->
+                </select>
+              </div>
+            </td>
         </tr>
     </tbody>
 </table>
